welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:54: error: not found: value growFlower
growFlower() 
^